# slate-v2

./: .gitignore  README.md  biome.jsonc  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-android.sh  clean-dev-bloat.sh  deploy-android.sh  export-apk.sh  install-android.sh  install-opt.sh  patch-android-system-bars.sh  publish-bare-linux-update.sh  regenerate-icons.sh  release-local.sh  setup-android-signing.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/android-templates/: MainActivity.kt
src-tauri/android-templates/res/values/: themes.xml
src-tauri/android-templates/res/values-v35/: themes.xml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_install.rs  auth.rs  commands.rs  daily_log_reminders.rs  db.rs  desktop.rs  desktop_updates.rs  lib.rs  logic.rs  main.rs  mobile_updates.rs  models.rs  reminder_scheduler.rs  reminders.rs  testing.rs  version.rs
src-tauri/tests/: daily_log_reminder_logic.rs  invoke_persist.rs  reminder_logic.rs  reminder_scheduler_logic.rs  seed_user_routines.rs  trigger_test_notification.rs  turso_persist.rs
src/components/: AppShell.tsx  BottomNav.tsx  CalendarPicker.tsx  ColorSwatches.tsx  ConfirmDialog.tsx  DayCompanion.tsx  DayNavigator.tsx  FormSheet.tsx  Heatmap.tsx  Logo.tsx  MobileChrome.tsx  ProgressRing.tsx  ReminderSettingsSection.tsx  TitleBar.tsx
src/lib/: api.ts  auth.ts  autostart.ts  dates.ts  errors.ts  (+8 more)
(+5 files in other folders)
