[package]
name = "slate"
version = "0.1.0"
description = "Personal routine and habit tracker"
authors = ["nithish"]
edition = "2021"

[lib]
name = "slate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "slate"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
libsql = { version = "0.10.0-pre.4", default-features = false, features = ["core", "remote", "tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
argon2 = "0.5"
rand = "0.8"
dotenvy = "0.15"
thiserror = "2"
time = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
tauri = { version = "2", features = ["test"] }
